CSS: Added position fixed on mobile

--- a/src/components/reusable/footer.css
+++ b/src/components/reusable/footer.css
@@ -4,6 +4,9 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
 
 .footer-text {
@@ -18,5 +21,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        position: unset;
     }
 }
